# Handmade-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  project.4coder  win32_build.bat  win32_debug.bat
apps/: circle.c  gpu_metaballs.c  metaballs.c  metaballs.h  metaballs0.c  metaballs1.c  test.c  texture_metaballs.c  triangle.c  two_circles.c
apps/junk/: demo.c  test.c
data/shaders/: circle.wgsl  clear.wgsl  frag.glsl  framebuffer.wgsl  gaussian_blur.wgsl  gpu_circle.wgsl  gpu_metaballs.wgsl  grid.wgsl  inst_frag.glsl  metaball_distance_field.wgsl  metaball_filter.wgsl  metaballs.wgsl  planet_frag.glsl  planet_vert.glsl  render_circle.wgsl  shader.wgsl  star_frag.glsl  star_vert.glsl  sun_frag.glsl  text_test.wgsl  vert.glsl
include/: HandmadeMath.h
lib/: stb_image.h  stb_image_write.h  stb_truetype.h
scripts/: ems_build.bat  project.4coder  webgpu_build.bat  webgpu_debug.bat  win32_build.bat  win32_debug.bat
scripts/ems/: ems_build.bat  ems_run.bat
src/: app.c  app.h  app_funcs.h  assets.c  assets.h  callback.h  entity.c  entity.h  hashmap.h  keys.inc  load.c  load.h  locs.inc  memory.c  memory.h  opengl.c  renderer.c  renderer.h  shader.c  shape.c  stack.h  utils.h  wgpu.c  wgpu_renderer.h  wgpu_utils.c
src/batch_builder/: main.c
src/emscripten/: ems_app.c  ems_app.h  ems_keys.inc  ems_main.c  ems_renderer.h  ems_wgpu.c
src/glfw/: glfw_app.c  glfw_app.h  glfw_keys.inc  glfw_main.c  glfw_opengl.c  glfw_renderer.h  glfw_wgpu.c
src/webgpu/: main.c  wgpu_renderer.c  wgpu_utils.c
src/win32/: win32_main.c
template/: home.html  shell_minimal.html
(+2 files in other folders)
